Added More Thermal PVD Data
Added more of the data fields from the real thermal PVD process

--- a/PVD/generate_pvd_archive.ipynb
+++ b/PVD/generate_pvd_archive.ipynb
@@ -516,7 +516,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "def series_to_time_series(series: pd.Series, scaling=1.0) -> dict:\n",
+    "def series_to_time_series(series: pd.Series, scaling=1.0, unit='') -> dict:\n",
     "    series = series * scaling\n",
     "    return {\n",
     "        'values': series.values,\n",
@@ -526,7 +526,8 @@
     "        'mean': series.mean(),\n",
     "        'min': series.min(),\n",
     "        'max': series.max(),\n",
-    "        'standard_deviation': series.std()\n",
+    "        'standard_deviation': series.std(),\n",
+    "        'unit': unit\n",
     "    }"
    ]
   },
@@ -581,6 +582,7 @@
     "}\n",
     "\n",
     "sources = ['1 - CsBr', '2 - CsI', '3 - PbI2', '4 - PbBr2']\n",
+    "\n",
     "qcms = ['QCM1_1', 'QCM1_2', 'QCM2_1', 'QCM2_2']\n",
     "qcms_source_number = {df[qcm[:-2]+\" FILMNAM\"+qcm[-2:]].values[0]: qcm for qcm in qcms}\n",
     "try:\n",
@@ -588,12 +590,27 @@
     "except KeyError:\n",
     "    raise ValueError(\"Film names do not match source names.\")\n",
     "\n",
-    "for source, qcm in zip(sources, qcms_ordered):\n",
+    "offset = (41.54e-3, 26.06e-3, 201.12e-3)\n",
+    "norm = np.linalg.norm(np.array(offset))\n",
+    "source_locs = [(1, 1, 1),(-1, 1, 1),(-1, -1, 1),(1, -1, 1)]\n",
+    "\n",
+    "for source, qcm, source_loc in zip(sources, qcms_ordered, source_locs):\n",
     "    print(f'Source: \"{source}\" with QCM: \"{df[qcm[:-2]+\" FILMNAM\"+qcm[-2:]].values[0]}\"')\n",
-    "    source_dict = {'m_def': '../upload/raw/pvd.schema.archive.yaml#PVDThermalSource', \n",
-    "        'name': source, 'source_type': 'Knudsen'}\n",
+    "    source_dict = {\n",
+    "        'm_def': '../upload/raw/pvd.schema.archive.yaml#PVDThermalSource', \n",
+    "        'name': source, \n",
+    "        'source_type': 'Knudsen', \n",
+    "        'position': {\n",
+    "            'x': offset[0] * source_loc[0], \n",
+    "            'y': offset[1] * source_loc[1], \n",
+    "            'z': offset[2] * source_loc[2], \n",
+    "            'n1': -1 * offset[0] * source_loc[0] / norm, \n",
+    "            'n2': -1 * offset[1] * source_loc[1] / norm,\n",
+    "            'n3': -1 * offset[2] * source_loc[2] / norm\n",
+    "        }\n",
+    "    }\n",
     "    source_map = {\n",
-    "        'power': f'{source} Aout', \n",
+    "        'power': f'{source} Aout',\n",
     "        'rate': f'{source} PV', \n",
     "        'shutter': f'{qcm[:-2]} SHTSRC{qcm[-2:]}',\n",
     "        'temperature': f'{source} T'\n",
@@ -604,15 +621,25 @@
     "        'shutter': 1,\n",
     "        'temperature': 1.0\n",
     "    }\n",
+    "    unit_map = {\n",
+    "        'power': 'fraction',\n",
+    "        'rate': 'nmol/cm2/10 s',\n",
+    "        'shutter': 'bool',\n",
+    "        'temperature': 'celsius'\n",
+    "    }\n",
     "    for key, value in source_map.items():\n",
-    "       source_dict[key] = series_to_time_series(df[value], scaling=scaling_map[key])\n",
+    "        source_dict[key] = series_to_time_series(df[value], scaling=scaling_map[key], \n",
+    "            unit=unit_map[key])\n",
     "    archive['data']['sources'].append(source_dict)\n",
     "\n",
     "key = \"Vacuum Pressure2\"\n",
-    "archive['data']['atmosphere']['chamber_pressure'] = series_to_time_series(df[key])\n",
+    "archive['data']['atmosphere']['chamber_pressure'] = series_to_time_series(df[key], unit='hPa')\n",
     "\n",
     "key = \"Substrate PV\"\n",
-    "archive['data']['substrates'].append({'temperature': series_to_time_series(df[key])})\n",
+    "archive['data']['substrates'].append({\n",
+    "    'temperature': series_to_time_series(df[key], unit='celsius'),\n",
+    "    'position': {'x': 0, 'y': 0, 'z': 0, 'n1': 0, 'n2': 0,'n3': 1}\n",
+    "})\n",
     "\n",
     "with open('pvd_example.data.archive.json', 'w') as fh:\n",
     "    json.dump(archive, fh, indent=2, cls=NpEncoder)"
