Refactored Position Section for PVD
Refactored the position section to use euler axis and rotation

--- a/PVD/generate_pvd_archive.ipynb
+++ b/PVD/generate_pvd_archive.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -15,7 +15,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -54,7 +54,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -79,7 +79,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -465,7 +465,7 @@
        "[9647 rows x 63 columns]"
       ]
      },
-     "execution_count": 4,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -476,7 +476,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
@@ -501,7 +501,7 @@
        "      dtype='object')"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -512,7 +512,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -533,7 +533,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -550,7 +550,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
@@ -604,9 +604,10 @@
     "            'x': offset[0] * source_loc[0], \n",
     "            'y': offset[1] * source_loc[1], \n",
     "            'z': offset[2] * source_loc[2], \n",
-    "            'n1': -1 * offset[0] * source_loc[0] / norm, \n",
-    "            'n2': -1 * offset[1] * source_loc[1] / norm,\n",
-    "            'n3': -1 * offset[2] * source_loc[2] / norm\n",
+    "            'e1': -1 * offset[0] * source_loc[0] / norm, \n",
+    "            'e2': -1 * offset[1] * source_loc[1] / norm,\n",
+    "            'e3': -1 * offset[2] * source_loc[2] / norm,\n",
+    "            'e_theta': 0\n",
     "        }\n",
     "    }\n",
     "    source_map = {\n",
@@ -638,7 +639,7 @@
     "key = \"Substrate PV\"\n",
     "archive['data']['substrates'].append({\n",
     "    'temperature': series_to_time_series(df[key], unit='celsius'),\n",
-    "    'position': {'x': 0, 'y': 0, 'z': 0, 'n1': 0, 'n2': 0,'n3': 1}\n",
+    "    'position': {'x': 0, 'y': 0, 'z': 0, 'e1': 0, 'e2': 0,'e3': 1, 'e_theta': 0}\n",
     "})\n",
     "\n",
     "with open('pvd_example.data.archive.json', 'w') as fh:\n",
