Added Substrate to IKZPulsedLaserDeposition
Added automatic population of subsections from top referenced substrate

--- a/PVD/PLD/jeremy_ikz/PLD_growthconditions_from_elog-dlog.ipynb
+++ b/PVD/PLD/jeremy_ikz/PLD_growthconditions_from_elog-dlog.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -17,7 +17,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -30,7 +30,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -39,7 +39,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -2816,20 +2816,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "True\n"
+      "not any(sub is not None for subs in test for sub in subs) = True\n"
      ]
     }
    ],
    "source": [
-    "test = None\n",
-    "print(f\"{test is None or len(test) == 0}\")"
+    "# test = [[None, None],[None, None]]\n",
+    "test = []\n",
+    "print(f\"{not any(sub is not None for subs in test for sub in subs) = }\")"
    ]
   }
  ],
