--- a/PVD/thermal_evaporation/hzb_unold_lab_pvdp/generate_pvd_archive.ipynb
+++ b/PVD/thermal_evaporation/hzb_unold_lab_pvdp/generate_pvd_archive.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -15,7 +15,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -37,7 +37,7 @@
     }
    ],
    "source": [
-    "with open('PVDProcess.csv', 'r') as fh:\n",
+    "with open('hzb_unold_lab_plugin/tests/data/PVDProcess.tsv', 'r') as fh:\n",
     "    line = fh.readline().strip()\n",
     "    metadata = {}\n",
     "    while line.startswith('#'):\n",
@@ -54,7 +54,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -79,7 +79,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
@@ -130,7 +130,7 @@
        "    <tr>\n",
        "      <th>0</th>\n",
        "      <td>15:53:18</td>\n",
-       "      <td>0.0</td>\n",
+       "      <td>0</td>\n",
        "      <td>0.0</td>\n",
        "      <td>0.001101</td>\n",
        "      <td>0.1056</td>\n",
@@ -154,7 +154,7 @@
        "    <tr>\n",
        "      <th>1</th>\n",
        "      <td>15:53:19</td>\n",
-       "      <td>1.0</td>\n",
+       "      <td>1</td>\n",
        "      <td>0.0</td>\n",
        "      <td>0.001114</td>\n",
        "      <td>0.1056</td>\n",
@@ -178,7 +178,7 @@
        "    <tr>\n",
        "      <th>2</th>\n",
        "      <td>15:53:20</td>\n",
-       "      <td>2.0</td>\n",
+       "      <td>2</td>\n",
        "      <td>0.0</td>\n",
        "      <td>0.001130</td>\n",
        "      <td>0.1056</td>\n",
@@ -202,7 +202,7 @@
        "    <tr>\n",
        "      <th>3</th>\n",
        "      <td>15:53:21</td>\n",
-       "      <td>3.0</td>\n",
+       "      <td>3</td>\n",
        "      <td>0.0</td>\n",
        "      <td>0.001244</td>\n",
        "      <td>0.1056</td>\n",
@@ -226,7 +226,7 @@
        "    <tr>\n",
        "      <th>4</th>\n",
        "      <td>15:53:22</td>\n",
-       "      <td>4.0</td>\n",
+       "      <td>4</td>\n",
        "      <td>0.0</td>\n",
        "      <td>0.001248</td>\n",
        "      <td>0.1056</td>\n",
@@ -274,7 +274,7 @@
        "    <tr>\n",
        "      <th>9642</th>\n",
        "      <td>18:34:02</td>\n",
-       "      <td>9644.0</td>\n",
+       "      <td>9644</td>\n",
        "      <td>0.0</td>\n",
        "      <td>-0.057201</td>\n",
        "      <td>0.1046</td>\n",
@@ -298,7 +298,7 @@
        "    <tr>\n",
        "      <th>9643</th>\n",
        "      <td>18:34:03</td>\n",
-       "      <td>9645.0</td>\n",
+       "      <td>9645</td>\n",
        "      <td>0.0</td>\n",
        "      <td>-0.054083</td>\n",
        "      <td>0.1046</td>\n",
@@ -322,7 +322,7 @@
        "    <tr>\n",
        "      <th>9644</th>\n",
        "      <td>18:34:04</td>\n",
-       "      <td>9646.0</td>\n",
+       "      <td>9646</td>\n",
        "      <td>0.0</td>\n",
        "      <td>-0.051648</td>\n",
        "      <td>0.1046</td>\n",
@@ -346,7 +346,7 @@
        "    <tr>\n",
        "      <th>9645</th>\n",
        "      <td>18:34:05</td>\n",
-       "      <td>9647.0</td>\n",
+       "      <td>9647</td>\n",
        "      <td>0.0</td>\n",
        "      <td>-0.048802</td>\n",
        "      <td>0.1046</td>\n",
@@ -370,7 +370,7 @@
        "    <tr>\n",
        "      <th>9646</th>\n",
        "      <td>18:34:06</td>\n",
-       "      <td>9648.0</td>\n",
+       "      <td>9648</td>\n",
        "      <td>0.0</td>\n",
        "      <td>-0.047041</td>\n",
        "      <td>0.1046</td>\n",
@@ -398,17 +398,17 @@
       ],
       "text/plain": [
        "          Time  Process Time in seconds  1 - CsBr Aout  1 - CsBr PV  \\\n",
-       "0     15:53:18                      0.0            0.0     0.001101   \n",
-       "1     15:53:19                      1.0            0.0     0.001114   \n",
-       "2     15:53:20                      2.0            0.0     0.001130   \n",
-       "3     15:53:21                      3.0            0.0     0.001244   \n",
-       "4     15:53:22                      4.0            0.0     0.001248   \n",
+       "0     15:53:18                        0            0.0     0.001101   \n",
+       "1     15:53:19                        1            0.0     0.001114   \n",
+       "2     15:53:20                        2            0.0     0.001130   \n",
+       "3     15:53:21                        3            0.0     0.001244   \n",
+       "4     15:53:22                        4            0.0     0.001248   \n",
        "...        ...                      ...            ...          ...   \n",
-       "9642  18:34:02                   9644.0            0.0    -0.057201   \n",
-       "9643  18:34:03                   9645.0            0.0    -0.054083   \n",
-       "9644  18:34:04                   9646.0            0.0    -0.051648   \n",
-       "9645  18:34:05                   9647.0            0.0    -0.048802   \n",
-       "9646  18:34:06                   9648.0            0.0    -0.047041   \n",
+       "9642  18:34:02                     9644            0.0    -0.057201   \n",
+       "9643  18:34:03                     9645            0.0    -0.054083   \n",
+       "9644  18:34:04                     9646            0.0    -0.051648   \n",
+       "9645  18:34:05                     9647            0.0    -0.048802   \n",
+       "9646  18:34:06                     9648            0.0    -0.047041   \n",
        "\n",
        "      1 - CsBr PV_Offset  1 - CsBr T  1 - CsBr TSP  2 - CsI Aout  2 - CsI PV  \\\n",
        "0                 0.1056     20.2274         0.409           0.0    0.000287   \n",
@@ -465,7 +465,7 @@
        "[9647 rows x 63 columns]"
       ]
      },
-     "execution_count": 4,
+     "execution_count": 17,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -476,7 +476,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -501,7 +501,7 @@
        "      dtype='object')"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -512,7 +512,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -534,7 +534,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -551,7 +551,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -561,6 +561,104 @@
     "    'PbBr2': 'Lead Bromide',\n",
     "    'CsBr': 'Cesium Bromide'\n",
     "}"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "sources = {column[0]: column.split()[2] for column in df.columns if column[-1:] == 'T'}\n",
+    "\n",
+    "qcms = ['QCM1_1', 'QCM1_2', 'QCM2_1', 'QCM2_2']\n",
+    "qcms_source_number = {df[qcm[:-2]+\" FILMNAM\"+qcm[-2:]].values[0]: qcm for qcm in qcms}\n",
+    "try:\n",
+    "    qcms_ordered = [qcms_source_number[int(source)] for source in sources]\n",
+    "except KeyError:\n",
+    "    raise ValueError(\"Film names do not match source names.\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 24,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Step 0, from 0 s to 2099 s.\n",
+      "pre\n",
+      "Step 1, from 2099 s to 5788 s.\n",
+      "deposition\n",
+      "Step 2, from 5788 s to 9648 s.\n",
+      "post\n"
+     ]
+    }
+   ],
+   "source": [
+    "shutters = [f'{qcm[:-2]} SHTSRC{qcm[-2:]}' for qcm in qcms_ordered]\n",
+    "start_times = []\n",
+    "for shutter in shutters:\n",
+    "    switch_times = df.loc[df[shutter].diff() != 0, 'Process Time in seconds'].values\n",
+    "    for time in switch_times:\n",
+    "        if not any(abs(t - time) < 5 for t in start_times):\n",
+    "            start_times.append(time)\n",
+    "start_times.append(df.iloc[-1,1])\n",
+    "depositions = 0\n",
+    "for idx, time in enumerate(start_times[:-1]):\n",
+    "    print(f'Step {idx}, from {time} s to {start_times[idx + 1]} s.')\n",
+    "    step = df.loc[\n",
+    "        (time <= df['Process Time in seconds'])\n",
+    "        & (df['Process Time in seconds'] < start_times[idx + 1])\n",
+    "    ]\n",
+    "    if step.loc[:, shutters].mode().any().any():\n",
+    "        depositions += 1\n",
+    "        print(f'deposition {depositions}')\n",
+    "    elif idx == 0:\n",
+    "        print('pre')\n",
+    "    else:\n",
+    "        print('post')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 25,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{'1': 'CsBr', '2': 'CsI', '3': 'PbI2', '4': 'PbBr2'}"
+      ]
+     },
+     "execution_count": 25,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "sources"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 26,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0.20701195521032112\n"
+     ]
+    }
+   ],
+   "source": [
+    "offset = (41.54e-3, 26.06e-3, 201.12e-3)\n",
+    "norm = np.linalg.norm(np.array(offset))\n",
+    "print(norm)"
    ]
   },
   {
@@ -640,7 +738,7 @@
     "    }\n",
     "    unit_map = {\n",
     "        'power': 'fraction',\n",
-    "        'rate': 'nmol/cm2/10 s',\n",
+    "        'rate': 'nmol/cm2/10 s',  # 1e-9mol/1e-4m2/1e1s=1e-6 mol/m2/s\n",
     "        'shutter': 'bool',\n",
     "        'temperature': 'celsius'\n",
     "    }\n",
@@ -691,7 +789,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.16"
+   "version": "3.10.11"
   },
   "orig_nbformat": 4,
   "vscode": {
