--- a/movpe_IKZ_Ga2O3/movpe_data_analysis.ipynb
+++ b/movpe_IKZ_Ga2O3/movpe_data_analysis.ipynb
@@ -40,7 +40,7 @@
    },
    "outputs": [
     {
-     "name": "stdin",
+     "name": "stdout",
      "output_type": "stream",
      "text": [
       " ········\n"
@@ -2675,16 +2675,26 @@
     "    f'{base_url}/uploads',\n",
     "    headers={'Authorization': f'Bearer {token}'}, json=query)\n",
     "my_response = response.json()\n",
-    "print(\"In this response there are the following uploads found:\\n\")\n",
+    "\n",
+    "print(\"             _                 _        __                       _    __                                             _                          \")\n",
+    "print(\" _   _ _ __ | | ___   __ _  __| |___   / _| ___  _   _ _ __   __| |  / _| ___  _ __    ___ _   _ _ __ _ __ ___ _ __ | |_   _   _ ___  ___ _ __  \")\n",
+    "print(\"| | | | '_ \\| |/ _ \\ / _` |/ _` / __| | |_ / _ \\| | | | '_ \\ / _` | | |_ / _ \\| '__|  / __| | | | '__| '__/ _ \\ '_ \\| __| | | | / __|/ _ \\ '__| \")\n",
+    "print(\"| |_| | |_) | | (_) | (_| | (_| \\__ \\ |  _| (_) | |_| | | | | (_| | |  _| (_) | |    | (__| |_| | |  | | |  __/ | | | |_  | |_| \\__ \\  __/ |    \")\n",
+    "print(\" \\__,_| .__/|_|\\___/ \\__,_|\\__,_|___/ |_|  \\___/ \\__,_|_| |_|\\__,_| |_|  \\___/|_|     \\___|\\__,_|_|  |_|  \\___|_| |_|\\__|  \\__,_|___/\\___|_|    \")\n",
+    "print(\"      |_|                                                                                                                                       \")\n",
     "for i in my_response['data']:\n",
-    "    print(f\"{i['upload_id']} {i['upload_name']}\")\n",
-    "    \n",
-    "print(\"\\nPlease copy-paste the upload id of your interest into the 'uploadid' variable:\\n\")\n",
+    "    print(f\"    upload name: {i['upload_name']:>50}         upload ID:    {i['upload_id']} \")\n",
+    "print(\"          _           _           _               _                 _  \")\n",
+    "print(\" ___  ___| | ___  ___| |_ ___  __| |  _   _ _ __ | | ___   __ _  __| | \")\n",
+    "print(\"/ __|/ _ \\ |/ _ \\/ __| __/ _ \\/ _` | | | | | '_ \\| |/ _ \\ / _` |/ _` | \")\n",
+    "print(\"\\__ \\  __/ |  __/ (__| ||  __/ (_| | | |_| | |_) | | (_) | (_| | (_| | \")\n",
+    "print(\"|___/\\___|_|\\___|\\___|\\__\\___|\\__,_|  \\__,_| .__/|_|\\___/ \\__,_|\\__,_| \")\n",
+    "print(\"                                           |_|                         \")\n",
+    "print(\"    Please copy-paste the upload id of your interest into the 'uploadid' variable:\")\n",
     "\n",
     "uploadid = \"DdQU68z4R9meWhslkNqOYA\"\n",
     "\n",
-    "print(f\"   'uploadid' chosen is: {uploadid}\\n\")\n",
-    "\n",
+    "print(f\"    Chosen upload ID:    {uploadid}\")\n",
     "query = {\n",
     "        'required': {\n",
     "            'metadata': '*', }\n",
@@ -2694,16 +2704,23 @@
     "    headers={'Authorization': f'Bearer {token}'}, json=query)\n",
     "my_response = response.json()\n",
     "\n",
-    "print(\"    General info on the current upload:\\n\")\n",
+    "print(\"          _           _           _               _                 _                  _            _       _         \")\n",
+    "print(\" ___  ___| | ___  ___| |_ ___  __| |  _   _ _ __ | | ___   __ _  __| |  _ __ ___   ___| |_ __ _  __| | __ _| |_ __ _  \")\n",
+    "print(\"/ __|/ _ \\ |/ _ \\/ __| __/ _ \\/ _` | | | | | '_ \\| |/ _ \\ / _` |/ _` | | '_ ` _ \\ / _ \\ __/ _` |/ _` |/ _` | __/ _` | \")\n",
+    "print(\"\\__ \\  __/ |  __/ (__| ||  __/ (_| | | |_| | |_) | | (_) | (_| | (_| | | | | | | |  __/ || (_| | (_| | (_| | || (_| | \")\n",
+    "print(\"|___/\\___|_|\\___|\\___|\\__\\___|\\__,_|  \\__,_| .__/|_|\\___/ \\__,_|\\__,_| |_| |_| |_|\\___|\\__\\__,_|\\__,_|\\__,_|\\__\\__,_| \")\n",
+    "print(\"                                           |_|                                                                        \")\n",
+    "\n",
+    "print(f\"    upload name: {my_response['upload']['upload_name']:>50}         upload ID:    {uploadid} \")\n",
     "\n",
     "for i in my_response[\"upload\"].items():\n",
     "    print(f\"    {i[0]}: {i[1]}\")\n",
     "\n",
     "my_data = response.json()[\"data\"] #[0] # [0][\"entry_id\"]\n",
     "\n",
-    "print('\\n    The entries in the current upload are:\\n')\n",
+    "print('\\nThe entries in the current upload are:\\n')\n",
     "for i in my_data:\n",
-    "    print(f\"    {i['entry_metadata']['entry_name']}\")\n",
+    "    print(f\"    {i['entry_metadata']['entry_name']}  {i['entry_id']}\")\n",
     "    \n",
     "for i in my_data:\n",
     "    print('\\n NEW ENTRY HERE \\n')\n",
